# dde-device-formatter

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  dde-device-formatter.desktop  dde-device-formatter.pro  main.cpp  translate_desktop2ts.sh  translate_ts2desktop.sh  update_trabslations.sh
.reuse/: dep5
app/: cmdmanager.cpp  singletonapp.cpp
debian/: changelog  control  dde-device-formatter.install  rules
translations/: dde-device-formatter.ts  dde-device-formatter_ady.ts  dde-device-formatter_af.ts  dde-device-formatter_am_ET.ts  dde-device-formatter_ar.ts  dde-device-formatter_ast.ts  dde-device-formatter_az.ts  dde-device-formatter_bg.ts  dde-device-formatter_bn.ts  dde-device-formatter_bo.ts  dde-device-formatter_bqi.ts  dde-device-formatter_br.ts  dde-device-formatter_ca.ts  dde-device-formatter_cs.ts  dde-device-formatter_da.ts  dde-device-formatter_de.ts  dde-device-formatter_el.ts  dde-device-formatter_en_AU.ts  dde-device-formatter_eo.ts  dde-device-formatter_es.ts  dde-device-formatter_et.ts  dde-device-formatter_eu.ts  dde-device-formatter_fa.ts  dde-device-formatter_fi.ts  dde-device-formatter_fil.ts  dde-device-formatter_fr.ts  dde-device-formatter_gl_ES.ts  dde-device-formatter_he.ts  dde-device-formatter_hi_IN.ts  dde-device-formatter_hr.ts  dde-device-formatter_hu.ts  dde-device-formatter_hy.ts  dde-device-formatter_id.ts  dde-device-formatter_it.ts  dde-device-formatter_ja.ts  dde-device-formatter_ka.ts  dde-device-formatter_km_KH.ts  dde-device-formatter_kn_IN.ts  dde-device-formatter_ko.ts  dde-device-formatter_ku.ts  (+76 more)
utils/: fsutils.cpp  udisksutils.cpp
view/: formatingpage.cpp  formatingpage.h  mainpage.cpp  mainwindow.cpp  mainwindow.h
